test/JDBC/sql_expected/545_1.out
# Executing test ErrorHandling1

CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO






create procedure ErrorHandling1 as
begin
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('Compile time error' as text);
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO

DROP TABLE t545
GO





CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO


begin transaction
GO
# Executing test ErrorHandling1



create procedure ErrorHandling1 as
begin
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
end
GO

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'ErrorHandling1', because it does not exist or you do not have permission.)~~


GO

DROP TABLE t545
GO




-- Checking xact_abort_flag for compile time error --
set xact_abort ON;
GO

CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO


begin transaction
GO
# Executing test ErrorHandling1



create procedure ErrorHandling1 as
begin
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
end
GO

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'ErrorHandling1', because it does not exist or you do not have permission.)~~


GO

DROP TABLE t545
GO


set xact_abort OFF;
GO

# Executing test ErrorHandling10000000

-- Next portion is for runtime error --
CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO






create procedure ErrorHandling1 as
begin
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
GO

create procedure ErrorHandling2 as
begin
exec ErrorHandling1;
if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
end
GO

begin transaction;
GO
exec ErrorHandling2;
GO
~~ERROR (Code: 545)~~

~~ERROR (Message: Explicit value must be specified for identity column in table 't545' either when IDENTITY_INSERT is set to ON or when a replication user is inserting into a NOT FOR REPLICATION identity column.)~~

~~START~~
text
STATEMENT TERMINATING ERROR
~~END~~

~~START~~
int
1
~~END~~

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
drop procedure ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO

DROP TABLE t545
GO




set xact_abort ON;
GO
# Executing test ErrorHandling10000000

CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO






create procedure ErrorHandling1 as
begin
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
if @@error > 0 select cast('STATEMENT TERMINATING ERROR' as text);
select @@trancount;
end
GO

if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
GO

create procedure ErrorHandling2 as
begin
exec ErrorHandling1;
if @@error > 0 select cast('CURRENT BATCH TERMINATING ERROR' as text);
end
GO

begin transaction;
GO
exec ErrorHandling2;
GO
~~ERROR (Code: 545)~~

~~ERROR (Message: Explicit value must be specified for identity column in table 't545' either when IDENTITY_INSERT is set to ON or when a replication user is inserting into a NOT FOR REPLICATION identity column.)~~

declare @err int = @@error; if (@err > 0 and @@trancount > 0) select cast('BATCH ONLY TERMINATING' as text) else if @err > 0 select cast('BATCH TERMINATING\ txn rolledback' as text);
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
drop procedure ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~START~~
text
BATCH TERMINATING\ txn rolledback
~~END~~


DROP TABLE t545
GO





set xact_abort OFF;
GO

# Executing test ErrorHandling10000000

-- Error classification is done --
CREATE TABLE t545
(
 c1 int IDENTITY
,c2 int
)
GO






begin try
select 1
SET IDENTITY_INSERT t545 ON 
INSERT INTO t545 (c2) VALUES(2)
end try
begin catch
	select xact_state();
end catch
if @@trancount > 0 rollback transaction;
drop procedure ErrorHandling1;
drop procedure ErrorHandling2;
set xact_abort OFF;
set implicit_transactions OFF;
GO
~~START~~
int
1
~~END~~

~~START~~
smallint
0
~~END~~

~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'ErrorHandling1', because it does not exist or you do not have permission.)~~

~~ERROR (Code: 3701)~~

~~ERROR (Message: Cannot drop the procedure 'ErrorHandling2', because it does not exist or you do not have permission.)~~


DROP TABLE t545
GO




